<resources>
    <string name="app_name">FitTracker</string>

    <!-- Google -->
    <string name="logged_into_google">Logged in with Google account</string>
    <string name="google_login_error_message">An error has occurred while logging in with Google</string>

    <!-- Icon Description Strings -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="desc_facebook_icon">Facebook Logo</string>
    <string name="desc_instagram_icon">Instagram Logo</string>

    <!-- Button Strings -->
    <string name="google_sign_in">Sign in with Google</string>
    <string name="facebook_sign_in">Sign in with Facebook</string>
    <string name="instagram_sign_in">Sign in with Instagram</string>
    <string name="manual_sign_in">Manual Sign In</string>
    <string name="manual_register">Manual Register</string>

    <!-- Facebook Strings -->
    <string name="facebook_app_id">2277009112312713</string>
    <string name="fb_login_protocol_scheme">fb2277009112312713</string>
    <string name="logged_into_facebook">Logged in with Facebook account</string>
    <string name="fb_login_cancel_message">Login with Facebook canceled</string>
    <string name="fb_login_error_message">An error has occurred while logging in with Facebook</string>

    <!-- Room Database -->
    <string name="db_text_msg_user_doesnt_exists"> The user was not present in the database. A new entry has been created.</string>
    <string name="db_text_msg_user_exists">User present in the database</string>
    <string name="db_text_msg_user_deleted">User deleted from the database</string>
    <string name="db_text_msg_adding_user">User added to the database</string>

    <!-- Local loggin -->
    <string name="loggin">Loggin</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>

    <!-- SingUp resources -->
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="birthday">Choose birthday</string>
    <string name="username">Username</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="first_name_error">At least 3 characters</string>
    <string name="last_name_error">At least 3 characters</string>
    <string name="email_error">Please, enter a valid e-mail address</string>
    <string name="phone_number_error">Please, enter a valid phone number</string>
    <string name="username_error">Please, use at least 8 alphanumeric characters</string>
    <string name="password_error">The password must have between 4 and 20 alphanumeric characters</string>
    <string name="re_enter_password_error">Passwords do not match</string>
    <string name="first_app_screen">First app screen</string>
    <string name="login_failed">Login failed</string>
    <string name="username_not_present_into_database">The username was not present into database</string>
    <string name="username_and_password_error">Username and password doesn\'t match to any user in the database</string>
    <string name="must_implement_dialog_listener">must implement NoticeDialogListener</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="birthday_error">Please, select a birthday </string>
    <string name="datePicker">datePicker</string>
    <string name="send_me_an_email_with_all_this_information">Send me an email with all this information</string>
    <string name="app_email_account">fittrackerapppps@gmail.com</string>
    <string name="app_email_password">fittracker1234</string>
    <string name="app_email_host">smtp.gmail.com</string>
    <string name="mail_subject">Fittracker Registration Completed!</string>
    <string name="email_cant_be_send">email can\'t be send</string>

    <string name="back">Cerrar</string>
    <string name="avatar">avatar</string>
    <string name="change_avatar">CHANGE AVATAR</string>
    <string name="less_details">less details</string>


    <!--Instagram-->
    <string name="toast_instagram_login">Instagram signed in as:  </string>
    <string name="toast_instagram_loading">Loading login view, please wait.</string>

    <!--Cards-->
    <string name="sensor_unavailable">sensor de pasos no disponible</string>
    <string name="count_steps">COUNT STEPS</string>

    <!--Weather Card-->
    <string name="weather_permission_label">To show you the weather, we need to retrieve your location.</string>
    <string name="weather_permission_button">It\'s okay</string>
    <string name="temperature">Temperature</string>
    <string name="refresh">refresh</string>
    <string name="weather_icon_description">Weather Icon</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="humidity">Humidity</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="rain">Rain</string>
    <string name="dash">-</string>
    <string name="humidity_value">%d%%</string>
    <string name="cloudiness_value">%d%%</string>
    <string name="wind_speed_value">%.2f km/h</string>
    <string name="pressure_value">%.2f hPa</string>
    <string name="rain_value">%.2f mm</string>
    <string name="degrees">%d C°</string>
    <string name="icon_url">http://openweathermap.org/img/w/%s.png</string>
    <string name="cards_see_more">See More</string>
    <string name="cards_see_less">See Less</string>
    <string name="weather_retrieve_error">The weather could not be retrieved. Please, try again.</string>

    <!--RunTracker-->
    <string name="start_running">Start Running</string>
    <string name="cero">0.0</string>
    <string name="distance">Distance:</string>
    <string name="steps">Steps:</string>
    <string name="calories">Calories:</string>
    <string name="stop_run">STOP</string>
    <string name="close">CLOSE</string>
    <string name="show_on_map">SHOW ON MAP</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_point_registered_yet">No point registered yet</string>




</resources>
