<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_cards_container"
        android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card_avatars"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="visible"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/card_elevation"
                app:layout_constraintBottom_toTopOf="@+id/cardView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/layout_avatars_card_collapsed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image_actual_avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/avatar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_avatar_empty" />

                    <ProgressBar
                        android:id="@+id/progress_bar_actual_avatar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:text="@string/first_name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_actual_avatar"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progress_bar_first_name"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/text_first_name"
                        app:layout_constraintEnd_toEndOf="@+id/text_first_name"
                        app:layout_constraintStart_toStartOf="@+id/text_first_name"
                        app:layout_constraintTop_toTopOf="@+id/text_first_name" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/layout_avatars_card_expanded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <ProgressBar
                        android:id="@+id/progress_bar_avatars"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="@dimen/progress_bar_avatars_expanded_card_size"
                        android:layout_height="@dimen/progress_bar_avatars_expanded_card_size"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@+id/text_cancel_avatars_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_cancel_avatars_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/less_details"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_avatars"
                        android:layout_width="@dimen/match_constraint"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:scrollbars="horizontal"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@+id/text_cancel_avatars_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </android.support.v7.widget.RecyclerView>
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/cardView2">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Second Card, does nothing" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="third Card, does nothing" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
